* (bug 18664) Relative URIs in interwiki links cause failed redirects
* (bug 19270) Relative URIs in interwiki links break interwiki transclusion
* (bug 22903) Revdelete log entries now show in the user preferred language.
* (bug 22905) Correctly handle <abbr> followed by ISBN
* (bug 22940) Namespace aliases pointing to main namespace don't work

== API changes in 1.17 ==
* (bug 22738) Allow filtering by action type on query=logevent
* (bug 22764) uselang parameter for action=parse
* (bug 22944) API: watchlist options are inconsistent

=== Languages updated in 1.17 ===

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.


=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to
set $wgMimeType = "application/xhtml+xml"; to test for remaining problem
cases, but this is not recommended on live sites. (This must be set for
MathML to display properly in Mozilla.)

For notes on 1.16.x and older releases, see HISTORY.


=== Online documentation ===
